[workspace]
resolver = "2"
members = [
    "stylo_dom",
    "malloc_size_of",
    "rustfmt.toml",
    "selectors",
    "servo_arc",
    "style",
    "style_derive",
    "stylo_config",
    "stylo_static_prefs",
    "style_traits",
    "to_shmem",
    "to_shmem_derive",
]
default-members = ["style"]
