[package]
name = "stylo_dom"
version = "0.1.0"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/stylo_dom/"
description = "Support crate for Stylo CSS engine"
repository = "https://github.com/servo/stylo"
keywords = ["css", "style"]
license = "MPL-2.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
bitflags = "2"
