[package]
name = "stylo_malloc_size_of"
version = "0.3.0"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/stylo"
description = "An allocator-agnostic crate for measuring the heap size of a value"

[lib]
path = "lib.rs"

[features]
gecko = ["thin-vec/gecko-ffi"]
servo = ["string_cache"]

[dependencies]
app_units = "0.7"
cssparser = "0.35"
euclid = "0.22"
selectors = { version = "0.28", path = "../selectors" }
servo_arc = { version = "0.4", path = "../servo_arc" }
smallbitvec = "2.3.0"
smallvec = "1.13"
string_cache = { version = "0.8", optional = true }
thin-vec = { version = "0.2.13" }
void = "1.0.2"
