[package]
name = "stylo_arc"
version = "0.4.0"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/stylo"
documentation = "https://docs.rs/stylo_arc/"
description = "A fork of std::sync::Arc with some extra functionality and without weak references"
edition = "2021"

[lib]
name = "stylo_arc"
path = "lib.rs"

[features]
gecko_refcount_logging = []
servo = ["serde", "track_alloc_size"]
track_alloc_size = []

[dependencies]
serde = { version = "1.0", optional = true }
stable_deref_trait = "1.0.0"
