[package]
name = "stylo"
version = "0.1.0"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/stylo/"
description = "The Stylo CSS engine (used in Servo and Gecko)"
repository = "https://github.com/servo/stylo"
keywords = ["css", "style"]
license = "MPL-2.0"
build = "build.rs"
edition = "2018"

# https://github.com/rust-lang/cargo/issues/3544
links = "servo_style_crate"

[lib]
name = "stylo"
path = "lib.rs"
doctest = false

[features]
default = ["servo"]
gecko = [
    "bindgen",
    "malloc_size_of/gecko",
    "mozbuild",
    "nsstring",
    "regex",
    "serde",
    "style_traits/gecko",
    "toml",
    "selectors/to_shmem",
    "to_shmem/gecko",
]
servo = [
    "cssparser/serde",
    "encoding_rs",
    "malloc_size_of/servo",
    "markup5ever",
    "mime",
    "serde",
    "servo_arc/servo",
    "servo_atoms",
    "style_config",
    "string_cache",
    "style_traits/servo",
    "url",
    "selectors/to_shmem",
    "to_shmem/servo",
]
gecko_debug = []
gecko_refcount_logging = []
nsstring = []

[dependencies]
app_units = "0.7"
arrayvec = "0.7"
atomic_refcell = "0.1"
bitflags = "2"
byteorder = "1.0"
cssparser = "0.34"
derive_more = { version = "0.99", default-features = false, features = ["add", "add_assign", "deref", "deref_mut", "from"] }
dom = { path = "../dom", version = "0.1", package = "stylo_dom" }
new_debug_unreachable = "1.0"
encoding_rs = {version = "0.8", optional = true}
euclid = "0.22"
fxhash = "0.2"
icu_segmenter = { version = "1.5", default-features = false, features = ["auto", "compiled_data"] }
indexmap = {version = "2", features = ["std"]}
itertools = "0.10"
itoa = "1.0"
lazy_static = "1"
log = "0.4"
malloc_size_of = { version = "0.1", path = "../malloc_size_of", package = "stylo_malloc_size_of" }
malloc_size_of_derive = "0.1"
markup5ever = { version = "0.14", optional = true }
matches = "0.1"
mime = { version = "0.3.13", optional = true }
num_cpus = {version = "1.1.0"}
num-integer = "0.1"
num-traits = "0.2"
num-derive = "0.4"
parking_lot = "0.12"
precomputed-hash = "0.1.1"
rayon = "1"
rayon-core = "1"
selectors = { version = "0.26", path = "../selectors", package = "stylo_selectors" }
serde = {version = "1.0", optional = true, features = ["derive"]}
servo_arc = { path = "../servo_arc", version = "0.4", package = "stylo_arc" }
servo_atoms = { version = "0.1", path = "../atoms", package = "stylo_atoms", optional = true}
smallbitvec = "2.3.0"
smallvec = "1.0"
static_assertions = "1.1"
static_prefs = { version = "0.1", path = "../style_static_prefs", package = "stylo_static_prefs" }
string_cache = { version = "0.8", optional = true }
style_config = { version = "0.1", path = "../style_config", package = "stylo_config", optional = true }
style_derive = { version = "0.1", path = "../style_derive", package = "stylo_derive" }
style_traits = { version = "0.1", path = "../style_traits", package = "stylo_traits" }
to_shmem = { version = "0.1", path = "../to_shmem", package = "stylo_to_shmem"}
to_shmem_derive = { version = "0.1", path = "../to_shmem_derive", package = "stylo_to_shmem_derive"}
thin-vec = "0.2.1"
uluru = "3.0"
unicode-bidi = { version = "0.3", default-features = false }
void = "1.0.2"
url = { version = "2.5", optional = true }

[build-dependencies]
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
bindgen = {version = "0.69", optional = true, default-features = false}
regex = {version = "1.0", optional = true, default-features = false, features = ["perf", "std"]}
walkdir = "2.1.4"
toml = {version = "0.5", optional = true, default-features = false}
mozbuild = {version = "0.1", optional = true}
