[package]
name = "stylo_derive"
version = "0.1.0"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/stylo_derive/"
description = "Derive crate for Stylo CSS engine"
repository = "https://github.com/servo/stylo"
keywords = ["css", "style"]
license = "MPL-2.0"
edition = "2015"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
darling = { version = "0.20", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["clone-impls", "derive", "parsing"] }
synstructure = "0.13"
