[package]
name = "stylo_traits"
version = "0.3.0"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
repository = "https://github.com/servo/stylo"
edition = "2021"
description = "Types used by the Stylo CSS engine"

[lib]
name = "style_traits"
path = "lib.rs"

[features]
servo = ["stylo_atoms", "cssparser/serde", "url", "euclid/serde"]
gecko = []

[dependencies]
app_units = "0.7"
bitflags = "2"
cssparser = "0.35"
euclid = "0.22"
malloc_size_of = { version = "0.3", path = "../malloc_size_of", package = "stylo_malloc_size_of" }
malloc_size_of_derive = "0.1"
selectors = { version = "0.27", path = "../selectors" }
serde = "1.0"
servo_arc = { version = "0.4", path = "../servo_arc" }
stylo_atoms = { version = "0.3", path = "../stylo_atoms", optional = true }
thin-vec = "0.2"
to_shmem = { version = "0.2", path = "../to_shmem" }
to_shmem_derive = { version = "0.1", path = "../to_shmem_derive" }
url = { version = "2.5", optional = true }
