[package]
name = "stylo_codegen"
version = "0.0.0"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/stylo_codegen/"
description = "Property codegen for Stylo"
repository = "https://github.com/servo/stylo"
keywords = ["css", "style"]
license = "MPL-2.0"
edition = "2021"
publish = false
