[package]
name = "stylo_static_prefs"
version = "0.2.0"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/stylo_static_prefs/"
description = "Static configuration for Stylo"
repository = "https://github.com/servo/stylo"
keywords = ["css", "style"]
license = "MPL-2.0"
edition = "2021"
