[package]
name = "stylo_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
repository = "https://github.com/servo/stylo"
publish = false

[lib]
name = "style_traits"
path = "lib.rs"

[features]
servo = ["stylo_atoms", "cssparser/serde", "url", "euclid/serde"]
gecko = []

[dependencies]
app_units = "0.7"
bitflags = "2"
cssparser = "0.34"
euclid = "0.22"
lazy_static = "1"
malloc_size_of = { path = "../stylo_malloc_size_of", package = "stylo_malloc_size_of" }
malloc_size_of_derive = "0.1"
selectors = { path = "../selectors" }
serde = "1.0"
servo_arc = { path = "../servo_arc" }
stylo_atoms = { path = "../stylo_atoms", optional = true }
thin-vec = "0.2"
to_shmem = { path = "../to_shmem" }
to_shmem_derive = { path = "../to_shmem_derive" }
url = { version = "2.5", optional = true }
