[package]
name = "to_shmem"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "to_shmem"
path = "lib.rs"

[features]
servo = ["cssparser/serde", "string_cache"]
gecko = ["thin-vec/gecko-ffi"]

[dependencies]
cssparser = "0.34"
servo_arc = { path = "../servo_arc" }
smallbitvec = "2.3.0"
smallvec = "1.13"
string_cache = { version = "0.8", optional = true }
thin-vec = { version = "0.2.1" }
